# works-db

./: .gitignore  .prettierrc.json  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
docs/API/: api.md  database.md  env.md
docs/brandings/: theme.md
mobile/: App.tsx  package.json
nginx/: Dockerfile  default.conf
server/: Cargo.toml  Dockerfile
server/migrations/2022-02-23-114308_music/: down.sql  up.sql
server/migrations/2022-02-23-114313_creator/: down.sql  up.sql
server/migrations/2022-02-23-114331_relation_crator_music/: down.sql  up.sql
server/migrations/2022-03-11-085635_relation_person_music/: down.sql  up.sql
server/src/: main.rs  models.rs  router.rs  schema.rs
server/src/firebase/: config.rs
server/src/firebase/admin/: jwt.rs
server/src/firebase/auth/: mod.rs
src/: App.css.ts  App.tsx  index.css.ts  main.tsx
src/components/: Card.tsx
src/styles/: _bootswatch.scss  main.scss
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  theme.ts
web/src/app/: store.ts
web/src/app/slices/: personListsSlice.ts
web/src/components/: Creator-list-item.tsx  Creator-list.tsx  Search-form.tsx
web/src/features/person/: personSlice.ts  personsSlice.ts
web/src/styles/: theme.ts
web/src/ts/: theme.ts
web/src/tsx/: App.tsx  main.tsx
web/src/tsx/views/: Creator.tsx  Home.tsx
web/src/views/components/: Circle-image.tsx  Creator-list-item.tsx  Creator-profile.tsx  PersonList.tsx  PersonListItem.tsx  (+7 more)
(+11 files in other folders)
