[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8.0.1"
